5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1884_1645.log
== TEST (2019-07-04 18:09:06) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in range(s):
	if i >= 2000:
		cont = cont + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:09:35) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:09:43) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:11:52) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:12:02) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
print(z)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:15:53) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for i in z:
	cont2 = cont2 + 
	z[i] = cont2
print(cont2)	
-- ERROR:
File "XXXX", line 10
    cont2 = cont2 + 
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:15:56) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for i in z:
	cont2 = cont2 + 1
	z[i] = cont2
print(cont2)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:16:15) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for i in range(z):
	cont2 = cont2 + 1
	z[i] = cont2
print(cont2)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:16:35) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for i in z:
	z[i] = cont2
print(cont2)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:16:57) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
for i in z:
	z[i] = cont
print(cont2)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:17:02) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
for i in z:
	z[i] = cont
print(cont)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:17:45) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for i in z:
	cont2[0] = z
	cont2 = cont2 + 1
print(cont2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:17:52) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for i in z:
	cont2[i] = z
	cont2 = cont2 + 1
print(cont2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:18:02) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for i in z:
	z[i] = cont2
	cont2 = cont2 + 1
print(cont2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:19:35) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for i in z:
	z[i] = cont2
print(cont2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:19:39) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for i in z:
	z[i] = cont2
print(cont2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:20:33) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for i in z:
	cont2 = cont2 + 1
	z[i] = cont2
print(cont2)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:24:05) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for i in z:
	z[cont2] = i
	cont2 = cont2 + 1
print(cont)
print(cont2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:24:37) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for i in v:
	z[cont2] = i
	cont2 = cont2 + 1
print(cont)
print(cont2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:24:44) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for i in s:
	z[cont2] = i
	cont2 = cont2 + 1
print(cont)
print(cont2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:25:01) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for i in range(s):
	z[cont2] = i
	cont2 = cont2 + 1
print(cont)
print(cont2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:25:18) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for j in s:
	z[cont2] = j
	cont2 = cont2 + 1
print(cont)
print(cont2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:25:31) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for j in size(s):
	z[cont2] = j
	cont2 = cont2 + 1
print(cont)
print(cont2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:25:35) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for j in size(s):
	z[cont2] = j
	cont2 = cont2 + 1
print(cont)
print(cont2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:25:47) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for j in s:
	if i >= 2000:
	z[cont2] = j
	cont2 = cont2 + 1
print(cont)
print(cont2)
-- ERROR:
File "XXXX", line 11
    z[cont2] = j
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:25:52) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for j in s:
	if i >= 2000:
		z[cont2] = j
		cont2 = cont2 + 1
print(cont)
print(cont2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:26:30) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for j in s:
	if i != -1:
		z[cont2] = j
		cont2 = cont2 + 1
print(cont)
print(cont2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:26:35) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for j in s:
	if i != 0:
		z[cont2] = j
		cont2 = cont2 + 1
print(cont)
print(cont2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:28:03) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for j in s:
	if i >= 2000:
	z[cont2] = j
	cont2 = cont2 + 1
print(cont)
print(cont2)
-- ERROR:
File "XXXX", line 11
    z[cont2] = j
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:28:08) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for j in s:
	if i >= 2000:
		z[cont2] = j
		cont2 = cont2 + 1
print(cont)
print(cont2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:30:57) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for j in s:
	if j >= 2000:
		z[cont2] = j
		cont2 = cont2 + 1
print(cont)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:31:35) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for j in s:
	if j >= 2000:
		z[cont2] = cont2
		cont2 = cont2 + 1
print(cont)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:32:40) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for j in s:
	if j >= 2000:
		z[cont2] = cont3
		cont2 = cont2 + 1
	cont3 = cont3 + 1
print(cont)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:32:57) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
for j in s:
	if j >= 2000:
		z[cont2] = cont3
		cont2 = cont2 + 1
	cont3 = 0
	cont3 = cont3 + 1
print(cont)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:33:10) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
cont3 = 0
for j in s:
	if j >= 2000:
		z[cont2] = cont3
		cont2 = cont2 + 1
	cont3 = cont3 + 1
print(cont)
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 18:33:18) 
-- CODE:
from numpy import*
s = array(eval(input("digite o vetor com os saques: ")))
cont = 0
for i in s:
	if i >= 2000:
		cont = cont + 1
z = zeros(cont,dtype=int)
cont2 = 0
cont3 = 0
for j in s:
	if j >= 2000:
		z[cont2] = cont3
		cont2 = cont2 + 1
	cont3 = cont3 + 1
print(cont)
print(z)
-- EXECUTION TIME:
0.944365
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
[0 2 4 5]
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
3
[0 2 4]
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
5
[0 5 6 7 9]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
